Mencoba melakukan styling pada elemen father icon lewat style.css. Bisa mengganti warna icon dengan color, bisa mengisi icon dengan warna dengan fill.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-#ai-bold {
+#add-input-bold {
     background-color: #aabbdd;
     border-radius: 50%;
+}
+
+#add-input-light {
+    color: yellow;
+}
+
+#add-input-light:hover {
+    color: red;
+    fill: green;
 }
