--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   display: inline-block;
 }
 
-.tooltip .tooltiptext {
+.tooltip .tooltip-text {
   width: 120px;
   background-color: black;
   color: #fff;
@@ -27,7 +27,7 @@
   margin-left: -10px;
 }
 
-.tooltip .tooltiptext::after {
+.tooltip .tooltip-text::after {
   content: "";
   position: absolute;
   top: 100%;
@@ -36,4 +36,13 @@
   border-width: 5px;
   border-style: solid;
   border-color: black transparent transparent transparent;
+}
+
+.tooltip-text .tooltip-text-options {
+  color: white;
+  text-decoration: none;
+}
+
+.tooltip-text .tooltip-text-options:hover {
+  color: skyblue;
 }
